fixed and game jump still buggy

--- a/style.css
+++ b/style.css
@@ -15,13 +15,14 @@ canvas {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-  }
+}
 
 #welcomeScreen p {
-  color: black;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 34px;
-    margin-bottom: 10px;
-    text-align: cnter;
+    margin-bottom: 40px;
+    text-align: center;
 }
 
 #initialsInput,
@@ -43,6 +44,7 @@ canvas {
   
   .modal-content {
     position: absolute;
+    color: black;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
